sand-macros/tests/cases/fail_component_tag_invalid.rs
use sand_macros::component;

#[component(Tag = "INVALID")]
fn bad() {}

fn main() {}
